--- a/stripe/.env
+++ b/stripe/.env
@@ -2,3 +2,4 @@ STRIPE_SECRET=sk_test_51IUVQQLaWxuHEV6MKLD4IGmgU6j5nET9fkqEnm1ZJ3nQc3yjaAjkyjLW7
 WEBAPP_URL="http://localhost:3000"
 PORT=3001
 STRIPE_WEBHOOK_SECRET=whsec_SkqT5TXEZ6P7wFqIGtSTbWE9TCrCW3Cj
+GOOGLE_APPLICATION_CREDENTIALS="./service-account.json"
