--- a/stripe-app-next/package.json
+++ b/stripe-app-next/package.json
@@ -17,8 +17,11 @@
     "reactfire": "^3.0.0-rc.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.3"
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.3"
   }
 }
